--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,16 +5,16 @@ aliases:
     username: $DOCKER_USER
     password: $DOCKER_PASS
   compose-ci-docker: &compose-ci-docker
-    - image: dockereng/kube-compose-ci-docker
+    - image: jdrouet/gocker
       auth: *docker-login
   compose-ci-golang: &compose-ci-golang
-    - image: dockereng/kube-compose-ci-golang
+    - image: jdrouet/gocker
       auth: *docker-login
   cluster-setup-steps: &cluster-setup-steps
     - attach_workspace:
         at: /root
     - run:
-        name: Deploy testkit cluster
+        name: Deploy kubernetes cluster
         command: ./scripts/e2e-cluster.sh create
     - persist_to_workspace:
         root: /root/
@@ -75,9 +75,9 @@ jobs:
       - run:
           name: Login to docker hub
           command: echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
-      - run:
-          name: Setup testkit
-          command: ./scripts/e2e-cluster.sh auth
+      # - run:
+      #     name: Setup testkit
+      #     command: ./scripts/e2e-cluster.sh auth
       - persist_to_workspace:
           root: /root/
           paths:
@@ -133,10 +133,14 @@ jobs:
             done
       - run:
           name: Tear down testkit cluster (on failure)
-          command: |
-            KUBE_VERSION=1.10.11 ./scripts/e2e-cluster.sh delete
-            KUBE_VERSION=1.11.5 ./scripts/e2e-cluster.sh delete
+          # command: |
+          #   KUBE_VERSION=1.10.11 ./scripts/e2e-cluster.sh delete
+          #   KUBE_VERSION=1.11.5 ./scripts/e2e-cluster.sh delete
+          command: ./scripts/e2e-cluster.sh delete
           when: on_fail
+          environment:
+            - CLUSTER_NAME: latest
+            - KUBE_VERSION: 1.11.5
       - persist_to_workspace:
           root: /root/
           paths:
@@ -161,54 +165,59 @@ jobs:
           root: /root/
           paths:
             - 'src/github.com/docker/compose-on-kubernetes/coverage.txt'
-  cluster-setup-1_10:
-    docker: *compose-ci-docker
-    working_directory: /root/src/github.com/docker/compose-on-kubernetes
-    environment:
-      - KUBE_VERSION: 1.10.11
-    steps: *cluster-setup-steps
+  # cluster-setup-1_10:
+  #   docker: *compose-ci-docker
+  #   working_directory: /root/src/github.com/docker/compose-on-kubernetes
+  #   environment:
+  #     - KUBE_VERSION: 1.10.11
+  #   steps: *cluster-setup-steps
   cluster-setup-1_11:
     docker: *compose-ci-docker
     working_directory: /root/src/github.com/docker/compose-on-kubernetes
     environment:
+      - CLUSTER_NAME: latest
       - KUBE_VERSION: 1.11.5
     steps: *cluster-setup-steps
   cluster-setup-benchmark:
     docker: *compose-ci-docker
     working_directory: /root/src/github.com/docker/compose-on-kubernetes
     environment:
+      - CLUSTER_NAME: latest
       - KUBE_VERSION: 1.11.5
       - KUBE_ENV_NAME: benchmark
     steps: *cluster-setup-steps
-  deploy-images-1_10:
-    docker: *compose-ci-docker
-    working_directory: /root/src/github.com/docker/compose-on-kubernetes
-    environment:
-      - KUBE_VERSION: 1.10.11
-    steps: *deploy-images-steps
+  # deploy-images-1_10:
+  #   docker: *compose-ci-docker
+  #   working_directory: /root/src/github.com/docker/compose-on-kubernetes
+  #   environment:
+  #     - KUBE_VERSION: 1.10.11
+  #   steps: *deploy-images-steps
   deploy-images-1_11:
     docker: *compose-ci-docker
     working_directory: /root/src/github.com/docker/compose-on-kubernetes
     environment:
+      - CLUSTER_NAME: latest
       - KUBE_VERSION: 1.11.5
     steps: *deploy-images-steps
   deploy-images-benchmark:
     docker: *compose-ci-docker
     working_directory: /root/src/github.com/docker/compose-on-kubernetes
     environment:
+      - CLUSTER_NAME: latest
       - KUBE_VERSION: 1.11.5
       - KUBE_ENV_NAME: benchmark
     steps: *deploy-images-steps
-  test-e2e-1_10:
-    docker: *compose-ci-golang
-    working_directory: /root/src/github.com/docker/compose-on-kubernetes
-    environment:
-      - KUBE_VERSION: 1.10.11
-    steps: *test-e2e-steps
+  # test-e2e-1_10:
+  #   docker: *compose-ci-golang
+  #   working_directory: /root/src/github.com/docker/compose-on-kubernetes
+  #   environment:
+  #     - KUBE_VERSION: 1.10.11
+  #   steps: *test-e2e-steps
   test-e2e-1_11:
     docker: *compose-ci-golang
     working_directory: /root/src/github.com/docker/compose-on-kubernetes
     environment:
+      - CLUSTER_NAME: latest
       - KUBE_VERSION: 1.11.5
     steps: *test-e2e-steps
   coverage-upload:
@@ -285,6 +294,7 @@ jobs:
     docker: *compose-ci-golang
     working_directory: /root/src/github.com/docker/compose-on-kubernetes    
     environment:
+      - CLUSTER_NAME: latest
       - KUBE_VERSION: 1.11.5
       - KUBE_ENV_NAME: benchmark
     steps:
@@ -314,12 +324,12 @@ workflows:
           filters:
             tags:
               only: /v.*/
-      - cluster-setup-1_10:
-          requires:
-            - checkout
-          filters:
-            tags:
-              only: /v.*/
+      # - cluster-setup-1_10:
+      #     requires:
+      #       - checkout
+      #     filters:
+      #       tags:
+      #         only: /v.*/
       - cluster-setup-1_11:
           requires:
             - checkout
@@ -344,12 +354,12 @@ workflows:
           filters:
             tags:
               only: /v.*/
-      - check-licenses:
-          requires:
-            - deploy-images-1_10
-          filters:
-            tags:
-              only: /v.*/
+      # - check-licenses:
+      #     requires:
+      #       - deploy-images-1_10
+      #     filters:
+      #       tags:
+      #         only: /v.*/
       - images:
           requires:
             - checkout
@@ -362,13 +372,13 @@ workflows:
           filters:
             tags:
               only: /v.*/
-      - deploy-images-1_10:
-          requires:
-            - cluster-setup-1_10
-            - images
-          filters:
-            tags:
-              only: /v.*/
+      # - deploy-images-1_10:
+      #     requires:
+      #       - cluster-setup-1_10
+      #       - images
+      #     filters:
+      #       tags:
+      #         only: /v.*/
       - deploy-images-1_11:
           requires:
             - cluster-setup-1_11
@@ -376,12 +386,12 @@ workflows:
           filters:
             tags:
               only: /v.*/
-      - test-e2e-1_10:
-          requires:
-            - deploy-images-1_10
-          filters:
-            tags:
-              only: /v.*/
+      # - test-e2e-1_10:
+      #     requires:
+      #       - deploy-images-1_10
+      #     filters:
+      #       tags:
+      #         only: /v.*/
       - test-e2e-1_11:
           requires:
             - deploy-images-1_11
@@ -391,7 +401,7 @@ workflows:
       - coverage-upload:
           requires:
             - test-unit
-            - test-e2e-1_10
+            # - test-e2e-1_10
             - test-e2e-1_11
           filters:
             tags:
@@ -418,7 +428,7 @@ workflows:
           
       - push-to-hub:
           requires:
-            - test-e2e-1_10
+            # - test-e2e-1_10
             - test-e2e-1_11
           filters:
             branches:
@@ -427,7 +437,7 @@ workflows:
               only: /v.*/
       - build-and-release-installer:
           requires:
-            - test-e2e-1_10
+            # - test-e2e-1_10
             - test-e2e-1_11
           filters:
             branches:
