--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ aliases:
   cluster-setup-steps: &cluster-setup-steps
     - attach_workspace:
         at: /root
+    - setup_remote_docker:
+        version: 17.07.0-ce
     - run:
         name: Deploy testkit cluster
         command: ./scripts/e2e-cluster.sh create
@@ -29,6 +31,8 @@ aliases:
   deploy-images-steps: &deploy-images-steps
     - attach_workspace:
         at: /root
+    - setup_remote_docker:
+        version: 17.07.0-ce
     - run:
         name: Deploy images
         command: |
@@ -75,9 +79,9 @@ jobs:
       - run:
           name: Login to docker hub
           command: echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
-      - run:
-          name: Setup testkit
-          command: ./scripts/e2e-cluster.sh auth
+      # - run:
+      #     name: Setup testkit
+      #     command: ./scripts/e2e-cluster.sh auth
       - persist_to_workspace:
           root: /root/
           paths:
@@ -134,7 +138,7 @@ jobs:
       - run:
           name: Tear down testkit cluster (on failure)
           command: |
-            KUBE_VERSION=1.10.11 ./scripts/e2e-cluster.sh delete
+            # KUBE_VERSION=1.10.11 ./scripts/e2e-cluster.sh delete
             KUBE_VERSION=1.11.5 ./scripts/e2e-cluster.sh delete
           when: on_fail
       - persist_to_workspace:
@@ -161,31 +165,34 @@ jobs:
           root: /root/
           paths:
             - 'src/github.com/docker/compose-on-kubernetes/coverage.txt'
-  cluster-setup-1_10:
-    docker: *compose-ci-docker
-    working_directory: /root/src/github.com/docker/compose-on-kubernetes
-    environment:
-      - KUBE_VERSION: 1.10.11
-    steps: *cluster-setup-steps
+  # cluster-setup-1_10:
+  #   docker: *compose-ci-docker
+  #   working_directory: /root/src/github.com/docker/compose-on-kubernetes
+  #   environment:
+  #     - CLUSTER_NAME: oldest
+  #     - KUBE_VERSION: 1.10.11
+  #   steps: *cluster-setup-steps
   cluster-setup-1_11:
     docker: *compose-ci-docker
     working_directory: /root/src/github.com/docker/compose-on-kubernetes
     environment:
+      - CLUSTER_NAME: latest
       - KUBE_VERSION: 1.11.5
     steps: *cluster-setup-steps
   cluster-setup-benchmark:
     docker: *compose-ci-docker
     working_directory: /root/src/github.com/docker/compose-on-kubernetes
     environment:
+      - CLUSTER_NAME: latest
       - KUBE_VERSION: 1.11.5
       - KUBE_ENV_NAME: benchmark
     steps: *cluster-setup-steps
-  deploy-images-1_10:
-    docker: *compose-ci-docker
-    working_directory: /root/src/github.com/docker/compose-on-kubernetes
-    environment:
-      - KUBE_VERSION: 1.10.11
-    steps: *deploy-images-steps
+  # deploy-images-1_10:
+  #   docker: *compose-ci-docker
+  #   working_directory: /root/src/github.com/docker/compose-on-kubernetes
+  #   environment:
+  #     - KUBE_VERSION: 1.10.11
+  #   steps: *deploy-images-steps
   deploy-images-1_11:
     docker: *compose-ci-docker
     working_directory: /root/src/github.com/docker/compose-on-kubernetes
@@ -199,12 +206,12 @@ jobs:
       - KUBE_VERSION: 1.11.5
       - KUBE_ENV_NAME: benchmark
     steps: *deploy-images-steps
-  test-e2e-1_10:
-    docker: *compose-ci-golang
-    working_directory: /root/src/github.com/docker/compose-on-kubernetes
-    environment:
-      - KUBE_VERSION: 1.10.11
-    steps: *test-e2e-steps
+  # test-e2e-1_10:
+  #   docker: *compose-ci-golang
+  #   working_directory: /root/src/github.com/docker/compose-on-kubernetes
+  #   environment:
+  #     - KUBE_VERSION: 1.10.11
+  #   steps: *test-e2e-steps
   test-e2e-1_11:
     docker: *compose-ci-golang
     working_directory: /root/src/github.com/docker/compose-on-kubernetes
@@ -314,12 +321,12 @@ workflows:
           filters:
             tags:
               only: /v.*/
-      - cluster-setup-1_10:
-          requires:
-            - checkout
-          filters:
-            tags:
-              only: /v.*/
+      # - cluster-setup-1_10:
+      #     requires:
+      #       - checkout
+      #     filters:
+      #       tags:
+      #         only: /v.*/
       - cluster-setup-1_11:
           requires:
             - checkout
@@ -344,12 +351,12 @@ workflows:
           filters:
             tags:
               only: /v.*/
-      - check-licenses:
-          requires:
-            - deploy-images-1_10
-          filters:
-            tags:
-              only: /v.*/
+      # - check-licenses:
+      #     requires:
+      #       - deploy-images-1_10
+      #     filters:
+      #       tags:
+      #         only: /v.*/
       - images:
           requires:
             - checkout
@@ -362,13 +369,13 @@ workflows:
           filters:
             tags:
               only: /v.*/
-      - deploy-images-1_10:
-          requires:
-            - cluster-setup-1_10
-            - images
-          filters:
-            tags:
-              only: /v.*/
+      # - deploy-images-1_10:
+      #     requires:
+      #       - cluster-setup-1_10
+      #       - images
+      #     filters:
+      #       tags:
+      #         only: /v.*/
       - deploy-images-1_11:
           requires:
             - cluster-setup-1_11
@@ -376,12 +383,12 @@ workflows:
           filters:
             tags:
               only: /v.*/
-      - test-e2e-1_10:
-          requires:
-            - deploy-images-1_10
-          filters:
-            tags:
-              only: /v.*/
+      # - test-e2e-1_10:
+      #     requires:
+      #       - deploy-images-1_10
+      #     filters:
+      #       tags:
+      #         only: /v.*/
       - test-e2e-1_11:
           requires:
             - deploy-images-1_11
@@ -391,7 +398,7 @@ workflows:
       - coverage-upload:
           requires:
             - test-unit
-            - test-e2e-1_10
+            # - test-e2e-1_10
             - test-e2e-1_11
           filters:
             tags:
@@ -418,7 +425,7 @@ workflows:
           
       - push-to-hub:
           requires:
-            - test-e2e-1_10
+            # - test-e2e-1_10
             - test-e2e-1_11
           filters:
             branches:
@@ -427,7 +434,7 @@ workflows:
               only: /v.*/
       - build-and-release-installer:
           requires:
-            - test-e2e-1_10
+            # - test-e2e-1_10
             - test-e2e-1_11
           filters:
             branches:
