--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 .idea/*
 !./idea/runConfigurations/
 bin
-coverage-enabled-images/
+pre-loaded-images/
 apiserver.local.config/
 kubeconfig
 default.etcd
 ./config/
 .pull-secret
 .vscode
-testkit
 junit*.xml
 *coverage.txt
