--- a/Dockerfile.kind
+++ b/Dockerfile.kind
@@ -1,3 +1,3 @@
-ARG BASE_IMAGE=kindest/node:v1.12.3
+ARG BASE_IMAGE=dockertesteng/kind-node:v1.13.3
 FROM ${BASE_IMAGE}
-COPY coverage-enabled-images/*.tar kind/images/
+COPY pre-loaded-images/*.tar kind/images/
