--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,10 @@
 version: 2
 
 aliases:
+  kube_versions:
+    - kube_1_11: &kube_1_11 "1.11.7"
+    - kube_1_13: &kube_1_13 "1.13.3"
+    - kube_1_14: &kube_1_14 "1.14.0-beta.1"
   docker-login: &docker-login
     username: $DOCKER_USER
     password: $DOCKER_PASS
@@ -178,14 +182,21 @@ jobs:
     working_directory: /root/src/github.com/docker/compose-on-kubernetes
     environment:
       GOPATH: "/root"
-      KUBERNETES_VERSION: "1.11.7"
+      KUBERNETES_VERSION: *kube_1_11
     steps: *e2e-kind-steps
   e2e-kind-1_13:
     docker: *public-golang
     working_directory: /root/src/github.com/docker/compose-on-kubernetes
     environment:
       GOPATH: "/root"
-      KUBERNETES_VERSION: "1.13.3"
+      KUBERNETES_VERSION: *kube_1_13
+    steps: *e2e-kind-steps
+  e2e-kind-1_14:
+    docker: *public-golang
+    working_directory: /root/src/github.com/docker/compose-on-kubernetes
+    environment:
+      GOPATH: "/root"
+      KUBERNETES_VERSION: *kube_1_14
     steps: *e2e-kind-steps
   e2e-benchmark-kind:
     docker: *public-golang
@@ -407,6 +418,14 @@ workflows:
               only: /v.*/
             branches:              
               only: /^(?!pull\/).*$/
+      - e2e-kind-1_14:
+          requires:
+            - images
+          filters:
+            tags:
+              only: /v.*/
+            branches:              
+              only: /^(?!pull\/).*$/
       # - e2e-benchmark-kind:
       #     requires:
       #       - images
@@ -420,6 +439,7 @@ workflows:
             - test-unit
             - e2e-kind-1_11
             - e2e-kind-1_13
+            - e2e-kind-1_14
             # - e2e-benchmark-kind
           filters:
             tags:
@@ -430,6 +450,7 @@ workflows:
           requires:
             - e2e-kind-1_11
             - e2e-kind-1_13
+            - e2e-kind-1_14
             # - e2e-benchmark-kind
           filters:
             branches:
@@ -440,6 +461,7 @@ workflows:
           requires:
             - e2e-kind-1_11
             - e2e-kind-1_13
+            - e2e-kind-1_14
             # - e2e-benchmark-kind
           filters:
             branches:
